fixed aboutPage cards on mobile

--- a/src/routes/AboutPage/AboutPage.scss
+++ b/src/routes/AboutPage/AboutPage.scss
@@ -1,14 +1,14 @@
 .AboutPage {
   display: flex;
   justify-content: space-around;
+  flex-wrap: wrap;
   margin-bottom: 4vh;
   padding: 0 6%;
   min-height: 60vh;
-      svg {
+    svg {
       fill: url(#my-cool-gradient);
       height: 5em;
       width: auto;
-      margin-top: 2vh;
       margin-bottom: 2vh;
     }
     p {
@@ -19,13 +19,26 @@
       color: black;
     }
 
+  .flip-card {
+    background-color: rgb(243, 243, 243);;
+    border-radius: 20px;
+    margin-bottom: 2%;
+    width: 100%;
+    padding-top: 4vh;
+  }
+}
+
+
+@media screen and (min-width: 376px) {
   /* The flip card container - set the width and height to whatever you want. We have added the border property to demonstrate that the flip itself goes out of the box on hover (remove perspective if you don't want the 3D effect */
+  .AboutPage {
 .flip-card {
   background-color: transparent;
   width: 300px;
   height: 200px;
   border-radius: 20px;
   perspective: 1000px; /* Remove this if you don't want the 3D effect */
+  margin-bottom: 2vh;
 }
 
 /* This container is needed to position the front and back side */
@@ -49,6 +62,9 @@
   width: 100%;
   height: 100%;
   backface-visibility: hidden;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
 }
 
 /* Style the front side (fallback if image is missing) */
@@ -62,19 +78,8 @@
 .flip-card-back {
   background-color: rgb(243, 243, 243);
   border-radius: 20px;
-  color: black;;
+  color: black;
   transform: rotateY(180deg);
 }
-  
-  .card {
-    border-radius: 20px;
-    padding: 2% 3% 2%;
-    width: 30%;
-    height: 100%;
-    -webkit-box-shadow: 0px 11px 15px 0px rgba(0,0,0,0.47);
-    -moz-box-shadow: 0px 11px 15px 0px rgba(0,0,0,0.47);
-    box-shadow: 0px 11px 15px 0px rgba(0,0,0,0.47);
-
-
   }
 }
